posts: fix shift+e keyboard shortcut not working.
Broken in da6a61b4e.

--- a/app/javascript/src/styles/specific/posts.scss
+++ b/app/javascript/src/styles/specific/posts.scss
@@ -221,10 +221,6 @@ div#c-post-versions, div#c-artist-versions {
       display: inline-block;
     }
 
-    i#open-edit-dialog {
-      font-size: var(--text-xxs);
-    }
-
     span[data-tag-counter] {
       float: right;
       color: var(--muted-text-color);
